--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -1,3 +1,18 @@
+.container {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+.title {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+}
+
 .form {
   width: 300px;
   padding: 20px;
